--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,15 @@
 == Changelog ==
 
+= 1.1.0 (2019-04-01) =
+* Compatibility for WordPress 5.2
+* Minified JavaScript code
+
+= 1.0.3 (2019-01-11) =
+* Internationalization support
+
+= 1.0.2 (2019-01-05) =
+* Add settings link
+
 = 1.0.1 (2018-12-27) =
 * Minimal fixes
 
